Remove underline from links

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body{
   background-color: antiquewhite;
 }
 
+a{
+  text-decoration: none;
+}
+
 .title{
   font-size: 90px;
   color: antiquewhite;
