--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ a{
   font-size: 90px;
   color: antiquewhite;
   background-color: coral;
+  max-width: fit-content;
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+  margin-top: 20px;
   border-radius: 10px;
 }
 
@@ -19,6 +24,8 @@ a{
   font-size: 30px;
   background-color: lightcoral;
   border-radius: 2px;
+  padding: 5px;
+  margin: 10px;
   color: azure;
 }
 
@@ -30,6 +37,10 @@ img{
   font-size: 30px;
   background-color: lightblue;
   border-radius: 10px;
+  max-width: fit-content;
+  padding: 5px;
+  margin: auto;
+  margin-top: 30px;
   color: aliceblue;
 }
 
