--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ a{
   max-width: fit-content;
   display: block;
   margin: auto;
+  padding: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
   border-radius: 10px;
@@ -45,17 +46,31 @@ img{
 }
 
 .ingredients{
+  display: inline-block;
   background-color: plum;
   border-radius: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 20px;
   color: aliceblue;
 }
 
 .method{
+  display: inline-block;
+  width: 70%;
+  float: none;
   background-color: yellowgreen;
   border-radius: 10px;
   color: aliceblue;
+  padding: 10px;
+  padding-left: 25px;
+  padding-right: 20px;
 }
 
 .home{
+  display: block;
+  max-width: fit-content;
   font-size: 15px;
+  margin: auto;
 }
