--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ a{
   border-radius: 2px;
   padding: 5px;
   margin: 10px;
-  color: azure;
+  color: antiquewhite;
 }
 
 img{
@@ -42,7 +42,7 @@ img{
   padding: 5px;
   margin: auto;
   margin-top: 30px;
-  color: aliceblue;
+  color: antiquewhite;
 }
 
 .ingredients{
